fix: changed btn positions on flickity on mobile

--- a/themes/superAwesome/sass/_flickity.scss
+++ b/themes/superAwesome/sass/_flickity.scss
@@ -79,7 +79,7 @@ https://flickity.metafizzy.co
   /* ---- previous/next buttons ---- */
   
   .flickity-prev-next-button {
-	top: 50%;
+	top: 90%;
 	width: 44px;
 	height: 44px;
 	border-radius: 50%;
@@ -233,7 +233,7 @@ https://flickity.metafizzy.co
   .flickity-fullscreen-button {
 	display: block;
 	right: 10px;
-	top: 10px;
+	top: -50px;
 	width: 24px;
 	height: 24px;
 	border-radius: 4px;
