--- a/themes/superAwesome/style.css
+++ b/themes/superAwesome/style.css
@@ -1016,7 +1016,7 @@ https://flickity.metafizzy.co
 
 /* ---- previous/next buttons ---- */
 .flickity-prev-next-button {
-  top: 50%;
+  top: 90%;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -1154,7 +1154,7 @@ html.is-flickity-fullscreen {
 .flickity-fullscreen-button {
   display: block;
   right: 10px;
-  top: 10px;
+  top: -50px;
   width: 24px;
   height: 24px;
   border-radius: 4px; }
